# synja

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: blep.rs  default_presets.json  envelope.rs  filter.rs  huovilainen.rs  lib.rs  lib.rs.bak  midi.rs  oscillator.rs  voice.rs
src/editor/: audio_slider.rs  frame_history.rs  mod.rs
src/synth/: envelope.rs  huovilainen.rs  midi.rs  mod.rs  oscillator.rs  parameters.rs  presets.rs  voice.rs
