[package]
name = "synja"
version = "0.1.0"
authors = ["Anders Forsgren <anders.forsgren@gmail.com>"]
edition = "2021"

[dependencies]

nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rand_pcg = "0.3.1"
rand = "0.8.5"
time = "0.3.15"
num-traits = "0.2"
egui_extras = "0.19.0"
egui_extras_xt = { git = "https://github.com/andersforsgren/egui_extras_xt", rev="aa4fd91941419393e5648389958caa4bbaca0eb1", features = ["knobs", "displays", "ui"] }

[lib]
crate-type = ["cdylib"]
